# TruePolitics

./: .gitignore  Procfile  get_tweets.py  manage.py  parse.py  pyproject.toml  release.sh  requirements.txt
.run/: create_base_data.run.xml  manage.run.xml
statements/: admin.py  models.py  serializers.py  urls.py  views.py
statements/data/: content.csv  gov.json  mks.json  mks.txt
statements/locale/he/LC_MESSAGES/: django.mo  django.po
statements/management/commands/: create_base_data.py  create_debug_users.py  create_fake_data.py  import_content.py
statements/migrations/: 0001_initial.py  0002_alter_person_options_alter_statement_options_and_more.py  0002_alter_statement_url.py  0002_statement_review_date.py  0003_statement_created_at_statement_updated_at_and_more.py  0003_statement_published_at_statement_status.py  0003_statement_reviewed_by.py  0004_statement_img_url.py  0005_alter_person_img_url_alter_resource_url_and_more.py  0006_statement_review_url_alter_statement_review_date.py  0007_alter_statement_review_date.py  0008_alter_statement_content_alter_statement_date_and_more.py  0009_statement_url_alter_statement_img_url_and_more.py  0010_statement_detailed_content_delete_resource.py
statements/static/: main.css
statements/templates/: base.html
statements/templates/statements/: _statement.html  _statements.html  person_detail.html  statement_detail.html  statement_list.html  topic_detail.html
statements/templatetags/: web.py
true_politics/: admin.py  apps.py  asgi.py  base_settings.py  local_settings.py  settings.py  urls.py  wsgi.py
