[tool.poetry]
name = "truepolitics"
version = "0.1.0"
description = ""
authors = ["Udi Oron <udioron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
Django = "^4.1.7"
django-extensions = "^3.2.1"
jupyter = "^1.0.0"
ipython = "*"
pytest = "^7.2.2"
faker = "^17.6.0"
tqdm = "^4.65.0"
jupyterlab = "^3.6.1"
pandas = "^1.5.3"
lxml = "^4.9.2"
django-bootstrap5 = "^22.2"
black = {extras = ["d"], version = "^23.1.0"}
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
tweepy = "^4.13.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
setproctitle = "^1.3.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
